--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,3 +1,16 @@
 .homePageContainer {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+
+  .content {
+    margin-top: 40px;
+    display: flex;
+    gap: 20px;
+
+    flex: 1;
+    flex-wrap: wrap;
+  }
 }
