--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -1,21 +1,68 @@
 .cardContainer {
   display: flex;
   align-items: center;
+  justify-content: space-around;
   flex-direction: column;
   height: 300px;
   width: 248px;
-  padding: 4px;
+  padding: 16px 4px;
   border-radius: 3px;
   background-color: var(--blue-10);
 
-  img {
-    width: 148px;
-    height: 148px;
-    margin-bottom: 16px;
-    background-color: var(--blue-800);
+  &:hover {
+    animation: zoom both;
+
+    @keyframes zoom {
+      from {
+        transform: scale(1);
+      }
+      to {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  .imageArea {
+    display: flex;
+    width: 168px;
+    height: 120px;
+    background-color: var(--gray-100);
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    flex-direction: column;
+    justify-self: start;
+    margin-bottom: 8px;
+
+    svg {
+      width: 74px;
+      height: 74px;
+      color: var(--gray-800);
+    }
+  }
+
+  h3 {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--gray-800);
+    margin-bottom: 8px;
+  }
+
+  .informationArea {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    p {
+      width: 168px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
   }
 
   span {
+    text-align: center;
     color: var(--blue-800);
   }
 }
