--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,16 +1,19 @@
 .homePageContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  flex-direction: column;
 
   .content {
-    margin-top: 40px;
     display: flex;
-    gap: 20px;
-
-    flex: 1;
     flex-wrap: wrap;
+    margin-top: 40px;
+    gap: 20px;
+    justify-content: center;
+    max-width: 800px;
+
+    div {
+      flex: 1 1 1 100px;
+    }
   }
 }
