--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,11 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--gray-800)
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
 h1 {
   font-size:  2rem;
 }
