--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -31,8 +31,8 @@
     align-items: center;
     border-radius: 3px;
     flex-direction: column;
-    justify-self: start;
     margin-bottom: 8px;
+    position: static;
 
     svg {
       width: 74px;
@@ -42,9 +42,7 @@
   }
 
   h3 {
-    font-size: 16px;
-    font-weight: 500;
-    color: var(--gray-800);
+    text-align: center;
     margin-bottom: 8px;
   }
 
