--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,21 +1,4 @@
 .buttonContainer {
-  display: flex;
+  background-color: red;
 
-  button {
-    background-color: var(--blue-10);
-    border: none;
-    text-align: center;
-    display: flex;
-    height: 48px;
-    width: 140px;
-    align-items: center;
-    justify-content: center;
-    color: var(--blue-800);
-    transition: 0.2s;
-
-    :hover {
-      color: var(--white-20);
-      background-color: var(--blue-200);
-    }
-  }
 }
