--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -1,16 +1,21 @@
 .cardContainer {
   display: flex;
   align-items: center;
-  justify-content: space-around;
   flex-direction: column;
-  height: 300px;
+  height: 340px;
   width: 248px;
-  padding: 16px 4px;
+  padding: 16px 8px;
   border-radius: 3px;
   background-color: var(--blue-10);
+  gap: 8px;
+
+  & {
+    cursor: default;
+  }
 
   &:hover {
     animation: zoom both;
+    filter: brightness(0.9);
 
     @keyframes zoom {
       from {
@@ -23,7 +28,6 @@
   }
 
   .imageArea {
-    display: flex;
     width: 168px;
     height: 120px;
     background-color: var(--gray-100);
@@ -50,17 +54,20 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    height: 100%;
+    width: 100%;
 
-    p {
-      width: 168px;
+
+    h5.description {
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
     }
   }
 
-  span {
+  span.price {
     text-align: center;
-    color: var(--blue-800);
+    margin-top: auto;
+    margin-bottom: 4px;
   }
 }
