--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 40px;
+    margin-bottom: 40px;
     gap: 20px;
     justify-content: center;
     max-width: 800px;
