--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -55,14 +55,14 @@ button {
 :root {
   --white: #FFF;
 
-  --gray-20: #F6F5F5; //--bg-primary
+  --gray-20: #F6F5F5;
   --gray-50: #F7F8FA;
   --gray-100: #E6E8EB;
   --gray-200: #AFB2B1;
   --gray-500: #808080;
   --gray-800: #494D4B;
 
-  --blue-10: #D3E0EA;// --bg-secondary
-  --blue-200: #1687A7; // --text-primary
-  --blue-800: #276678; // --text-secondary
+  --blue-10: #D3E0EA;
+  --blue-200: #1687A7;
+  --blue-800: #276678;
 }
